upgrade to React 16

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,9 @@
     },
     "testRegex": "/__tests__/.*\\.(ts|tsx|js|jsx)$",
     "setupFiles": [
-      "./before-tests.js",
-      "./__mocks__/localStorage.js"
+      "./__mocks__/requestAnimationFrame.js",
+      "./__mocks__/localStorage.js",
+      "./before-tests.js"
     ],
     "coverageDirectory": "__coverage__",
     "coverageReporters": [
@@ -57,18 +58,18 @@
     "lodash": "4.x",
     "moment": "2.x",
     "plotly.js": "1.28.x",
-    "prop-types": "15.x",
-    "react": "15.6.x",
-    "react-addons-css-transition-group": "15.6.x",
-    "react-dom": "15.6.x",
+    "prop-types": "15.6.x",
+    "react": "16.x",
+    "react-dom": "16.x",
     "react-helmet": "5.x",
-    "react-lightweight-tooltip": "0.x",
-    "react-modal": "1.x",
+    "react-lightweight-tooltip": "1.x",
+    "react-modal": "3.x",
     "react-redux": "5.x",
     "react-router-dom": "4.x",
-    "react-tagsinput": "3.x",
+    "react-tagsinput": "3.19.x",
+    "react-transition-group": "^2.2.1",
     "redux": "3.x",
-    "redux-form": "6.x",
+    "redux-form": "7.x",
     "redux-thunk": "2.x",
     "sanitize-html": "^1.16.1",
     "showdown": "^1.8.3",
@@ -76,7 +77,7 @@
     "whatwg-fetch": "2.x"
   },
   "devDependencies": {
-    "@types/enzyme": "^2.8.6",
+    "@types/enzyme": "3.x",
     "@types/immutable": "3.x",
     "@types/jest": "20.x",
     "@types/lodash": "4.x",
@@ -86,32 +87,33 @@
     "@types/react-helmet": "5.x",
     "@types/react-redux": "^5.0.9",
     "@types/react-router-dom": "^4.0.8",
+    "@types/react-transition-group": "^2.0.6",
     "async": "^2.5.0",
     "awesome-typescript-loader": "^3.2.3",
     "chromedriver": "2.x",
     "css-loader": "0.28.x",
-    "enzyme": "^2.9.1",
+    "enzyme": "3.x",
+    "enzyme-adapter-react-16": "^1.0.4",
     "eslint": "4.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
     "extract-text-webpack-plugin": "3.x",
     "file-loader": "0.11.x",
-    "glslify": "5.x",
     "glslify-loader": "1.x",
     "html-webpack-plugin": "2.x",
     "jasmine-core": "2.x",
+    "jest": "20.0.0",
     "jest-cli": "20.x",
     "nightwatch": "0.9.x",
     "node-sass": "4.x",
-    "react-addons-perf": "15.x",
-    "react-test-renderer": "15.x",
+    "react-test-renderer": "16.0.0",
     "resolve-url-loader": "2.x",
     "sass-loader": "6.x",
     "style-loader": "0.18.x",
     "ts-jest": "20.x",
     "ts-loader": "2.x",
-    "typescript": "2.5.1",
-    "typescript-eslint-parser": "8.0",
+    "typescript": "2.6.1",
+    "typescript-eslint-parser": "10.0.0",
     "uglifyjs-webpack-plugin": "1.0.0-beta.1",
     "webpack": "3.x",
     "webpack-bundle-analyzer": "2.x"
