--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "blueimp-md5": "2.x",
-    "brace": "^0.10.0",
+    "brace": "0.11.x",
     "classnames": "2.x",
     "file-saver": "1.3.x",
     "font-awesome": "4.7.x",
@@ -67,12 +67,12 @@
     "react-redux": "5.x",
     "react-router-dom": "4.x",
     "react-tagsinput": "3.19.x",
-    "react-transition-group": "^2.2.1",
+    "react-transition-group": "2.2.x",
     "redux": "3.x",
     "redux-form": "7.x",
     "redux-thunk": "2.x",
-    "sanitize-html": "^1.16.1",
-    "showdown": "^1.8.3",
+    "sanitize-html": "1.x",
+    "showdown": "1.8.x",
     "url-search-params-polyfill": "2.x",
     "whatwg-fetch": "2.x"
   },
@@ -85,36 +85,36 @@
     "@types/react": "16.x",
     "@types/react-dom": "15.x",
     "@types/react-helmet": "5.x",
-    "@types/react-redux": "^5.0.9",
-    "@types/react-router-dom": "^4.0.8",
-    "@types/react-transition-group": "^2.0.6",
-    "async": "^2.5.0",
-    "awesome-typescript-loader": "^3.2.3",
+    "@types/react-redux": "5.x",
+    "@types/react-router-dom": "4.x",
+    "@types/react-transition-group": "2.x",
+    "async": "2.x",
+    "awesome-typescript-loader": "3.x",
     "chromedriver": "2.x",
     "css-loader": "0.28.x",
     "enzyme": "3.x",
-    "enzyme-adapter-react-16": "^1.0.4",
+    "enzyme-adapter-react-16": "1.x",
     "eslint": "4.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
     "extract-text-webpack-plugin": "3.x",
-    "file-loader": "0.11.x",
+    "file-loader": "1.x",
     "glslify-loader": "1.x",
     "html-webpack-plugin": "2.x",
     "jasmine-core": "2.x",
-    "jest": "20.0.0",
+    "jest": "20.x",
     "jest-cli": "20.x",
     "nightwatch": "0.9.x",
     "node-sass": "4.x",
-    "react-test-renderer": "16.0.0",
+    "react-test-renderer": "16.x",
     "resolve-url-loader": "2.x",
     "sass-loader": "6.x",
-    "style-loader": "0.18.x",
+    "style-loader": "0.19.x",
     "ts-jest": "20.x",
     "ts-loader": "2.x",
-    "typescript": "2.6.1",
-    "typescript-eslint-parser": "10.0.0",
-    "uglifyjs-webpack-plugin": "1.0.0-beta.1",
+    "typescript": "2.6.x",
+    "typescript-eslint-parser": "10.x",
+    "uglifyjs-webpack-plugin": "1.x",
     "webpack": "3.x",
     "webpack-bundle-analyzer": "2.x"
   },
