Faster webpack builds.
- Use thread-loader, and fork-ts-checker-webpack-plugin to parallelize build & type checking.
- Use cache-loader to speed up build.
- Fix localStorage mock to work with new type checking. (localStorage was already decleared)
- Remove awesome-typescript-loader as it is no longer used.
- Add .cache-loader to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /bin
 /gopath
 /Godeps/_workspace/src/github.com/coreos-inc/bridge
+/frontend/.cache-loader
 /frontend/__coverage__
 /frontend/public/bower_components
 /frontend/node_modules
