--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "testRegex": "/__tests__/.*\\.(ts|tsx|js|jsx)$",
     "setupFiles": [
       "./__mocks__/requestAnimationFrame.js",
-      "./__mocks__/localStorage.js",
+      "./__mocks__/localStorage.ts",
       "./before-tests.js"
     ],
     "coverageDirectory": "__coverage__",
@@ -91,7 +91,7 @@
     "@types/react-router-dom": "4.x",
     "@types/react-transition-group": "2.x",
     "@types/webpack": "^3.8.2",
-    "awesome-typescript-loader": "3.x",
+    "cache-loader": "1.x",
     "chromedriver": "2.x",
     "css-loader": "0.28.x",
     "enzyme": "3.x",
@@ -101,6 +101,7 @@
     "eslint-plugin-react": "7.x",
     "extract-text-webpack-plugin": "3.x",
     "file-loader": "1.x",
+    "fork-ts-checker-webpack-plugin": "0.x",
     "glslify-loader": "1.x",
     "html-webpack-plugin": "2.x",
     "jasmine-core": "2.x",
@@ -115,8 +116,9 @@
     "resolve-url-loader": "2.x",
     "sass-loader": "6.x",
     "style-loader": "0.19.x",
+    "thread-loader": "1.x",
     "ts-jest": "20.x",
-    "ts-loader": "2.x",
+    "ts-loader": "3.x",
     "ts-node": "^3.3.0",
     "typescript": "2.6.x",
     "typescript-eslint-parser": "10.x",
