--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,6 @@
     ]
   },
   "dependencies": {
-    "@types/jasminewd2": "^2.0.3",
-    "blueimp-md5": "2.x",
     "brace": "0.11.x",
     "classnames": "2.x",
     "file-saver": "1.3.x",
@@ -83,7 +81,8 @@
   "devDependencies": {
     "@types/enzyme": "3.x",
     "@types/immutable": "3.x",
-    "@types/jasmine": "^2.8.2",
+    "@types/jasmine": "2.8.x",
+    "@types/jasminewd2": "2.0.x",
     "@types/lodash": "4.x",
     "@types/moment": "2.x",
     "@types/react": "16.x",
@@ -92,7 +91,7 @@
     "@types/react-redux": "5.x",
     "@types/react-router-dom": "4.x",
     "@types/react-transition-group": "2.x",
-    "@types/webpack": "^3.8.2",
+    "@types/webpack": "3.8.x",
     "cache-loader": "1.x",
     "chromedriver": "2.x",
     "css-loader": "0.28.x",
@@ -107,13 +106,13 @@
     "glslify-loader": "1.x",
     "html-webpack-plugin": "2.x",
     "jasmine-core": "2.x",
-    "jasmine-reporters": "^2.2.1",
+    "jasmine-reporters": "2.2.x",
     "jest": "20.x",
     "jest-cli": "20.x",
     "node-sass": "4.x",
-    "protractor": "^5.2.0",
-    "protractor-fail-fast": "^3.0.2",
-    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
+    "protractor": "5.2.x",
+    "protractor-fail-fast": "3.0.x",
+    "protractor-jasmine2-screenshot-reporter": "0.5.x",
     "react-test-renderer": "16.x",
     "resolve-url-loader": "2.x",
     "sass-loader": "6.x",
@@ -121,7 +120,7 @@
     "thread-loader": "1.x",
     "ts-jest": "20.x",
     "ts-loader": "3.x",
-    "ts-node": "^3.3.0",
+    "ts-node": "3.3.x",
     "typescript": "2.6.x",
     "typescript-eslint-parser": "10.x",
     "uglifyjs-webpack-plugin": "1.x",
