--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color .",
     "test": "jest",
     "webdriver-update": "webdriver-manager update",
+    "test-gui-tap": "TAP=true yarn run test-gui",
     "test-gui": "yarn run test-suite --suite all",
     "test-suite": "ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/protractor integration-tests/protractor.conf.ts",
     "analyze": "NODE_ENV=production ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --profile --json | awk '{if(NR>2)print}' > public/dist/stats.json && ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack-bundle-analyzer --mode static -r public/dist/report.html public/dist/stats.json"
@@ -107,6 +108,7 @@
     "html-webpack-plugin": "2.x",
     "jasmine-core": "2.x",
     "jasmine-reporters": "2.2.x",
+    "jasmine-console-reporter": "2.x",
     "jest": "20.x",
     "jest-cli": "20.x",
     "node-sass": "4.x",
