--- a/glide.yaml
+++ b/glide.yaml
@@ -33,11 +33,8 @@ import:
   subpackages:
   - diff
   - pretty
-- package: golang.org/x/net
-  version: e90d6d0afc4c315a0d87a568ae68577cc15149a0
-  subpackages:
-  - context
-  - websocket
+- package: github.com/gorilla/websocket
+  version: 4ac909741dfa57448bfadfdbca0cf7eeaa68f0e2
 
 # Dependencies on Dex
 - package: github.com/coreos/dex
