--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "brace": "0.11.x",
     "classnames": "2.x",
+    "core-js": "2.x",
     "file-saver": "1.3.x",
     "font-awesome": "4.7.x",
     "fuzzysearch": "1.0.x",
