--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf ./public/dist/ && ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --watch --progress",
-    "build": "rm -rf ./public/dist && NODE_ENV=production ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack",
+    "dev": "rm -rf ./public/dist/ && ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --mode development --watch --progress",
+    "build": "rm -rf ./public/dist && NODE_ENV=production ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --mode=production",
     "coverage": "jest --coverage .",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color .",
     "test": "jest",
@@ -14,7 +14,7 @@
     "test-gui-tap": "TAP=true yarn run test-gui",
     "test-gui": "yarn run test-suite --suite all",
     "test-suite": "ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/protractor integration-tests/protractor.conf.ts",
-    "analyze": "NODE_ENV=production ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --profile --json | awk '{if(NR>2)print}' > public/dist/stats.json && ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack-bundle-analyzer --mode static -r public/dist/report.html public/dist/stats.json"
+    "analyze": "NODE_ENV=production ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --mode=production --profile --json | awk '{if(NR>2)print}' > public/dist/stats.json && ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack-bundle-analyzer --mode static -r public/dist/report.html public/dist/stats.json"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -94,6 +94,7 @@
     "@types/react-redux": "5.x",
     "@types/react-router-dom": "4.x",
     "@types/react-transition-group": "2.x",
+    "@types/webpack": "^4.1.1",
     "cache-loader": "1.x",
     "chromedriver": "2.x",
     "css-loader": "0.28.x",
@@ -102,16 +103,16 @@
     "eslint": "4.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
-    "extract-text-webpack-plugin": "3.x",
     "file-loader": "1.x",
     "fork-ts-checker-webpack-plugin": "0.x",
     "glslify-loader": "1.x",
-    "html-webpack-plugin": "2.x",
+    "html-webpack-plugin": "3.x",
     "jasmine-console-reporter": "2.x",
     "jasmine-core": "2.x",
     "jasmine-reporters": "2.x",
     "jest": "21.x",
     "jest-cli": "21.x",
+    "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "4.x",
     "protractor": "5.x",
     "protractor-fail-fast": "3.x",
@@ -126,9 +127,9 @@
     "ts-node": "4.x",
     "typescript": "2.x",
     "typescript-eslint-parser": "13.x",
-    "uglifyjs-webpack-plugin": "1.x",
-    "webpack": "3.x",
-    "webpack-bundle-analyzer": "2.x"
+    "webpack": "4.x",
+    "webpack-bundle-analyzer": "2.x",
+    "webpack-cli": "^2.0.12"
   },
   "engines": {
     "node": ">=8.x <10.0"
