Use lodash-es instead of lodash. Webpack can't tree shake lodash.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,7 +59,7 @@
     "history": "4.x",
     "immutable": "3.8.x",
     "js-yaml": "3.x",
-    "lodash": "4.x",
+    "lodash-es": "4.x",
     "moment": "2.x",
     "plotly.js": "1.28.x",
     "prop-types": "15.6.x",
@@ -86,7 +86,7 @@
     "@types/immutable": "3.x",
     "@types/jasmine": "2.8.x",
     "@types/jasminewd2": "2.0.x",
-    "@types/lodash": "4.x",
+    "@types/lodash-es": "4.x",
     "@types/moment": "2.x",
     "@types/react": "16.x",
     "@types/react-dom": "16.x",
