Transform lodash-es so that jest tests pass.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,9 @@
     "transform": {
       ".(ts|tsx|js|jsx)": "./node_modules/ts-jest/preprocessor.js"
     },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(lodash-es))"
+    ],
     "testRegex": "/__tests__/.*\\.(ts|tsx|js|jsx)$",
     "setupFiles": [
       "./__mocks__/requestAnimationFrame.js",
