--- a/frontend/package.json
+++ b/frontend/package.json
@@ -96,6 +96,7 @@
     "@types/react-router-dom": "4.x",
     "@types/react-transition-group": "2.x",
     "@types/webpack": "^4.1.1",
+    "bootstrap-sass": "^3.3.7",
     "cache-loader": "1.x",
     "chromedriver": "2.x",
     "css-loader": "0.28.x",
