--- a/frontend/package.json
+++ b/frontend/package.json
@@ -114,7 +114,7 @@
     "jasmine-reporters": "2.x",
     "jest": "21.x",
     "jest-cli": "21.x",
-    "mini-css-extract-plugin": "^0.2.0",
+    "mini-css-extract-plugin": "0.4.x",
     "node-sass": "4.x",
     "protractor": "5.x",
     "protractor-fail-fast": "3.x",
@@ -129,7 +129,7 @@
     "ts-node": "5.x",
     "typescript": "2.x",
     "typescript-eslint-parser": "14.x",
-    "webpack": "4.x",
+    "webpack": "4.4.x",
     "webpack-bundle-analyzer": "2.x",
     "webpack-cli": "^2.0.12"
   },
