--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "immutable": "3.x",
     "js-yaml": "3.x",
     "lodash-es": "4.x",
+    "patternfly": "^3.42.0",
     "plotly.js": "1.28.x",
     "prop-types": "15.6.x",
     "react": "16.x",
