--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "sanitize-html": "1.x",
     "showdown": "1.8.x",
     "text-encoding": "0.x",
+    "url-polyfill": "^1.0.12",
     "url-search-params-polyfill": "2.x",
     "whatwg-fetch": "2.x"
   },
