--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,8 @@
     "noUnusedLocals": true
   },
   "exclude": [
-    "./node_modules"
+    "node_modules",
+    "public/dist"
   ],
   "include": [
     "**/*.js",
