--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,7 +85,8 @@
     "text-encoding": "0.x",
     "url-polyfill": "^1.0.12",
     "url-search-params-polyfill": "2.x",
-    "whatwg-fetch": "2.x"
+    "whatwg-fetch": "2.x",
+    "xterm": "^3.3.0"
   },
   "devDependencies": {
     "@types/enzyme": "3.x",
